--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main class = "container">
         <h1>Hello, world</h1>
-        <div>
+        <div class="row">
             <div class="col">Coluna 1</div>
             <div class="col">Coluna 2</div>
             <div class="col">Coluna 3</div>
