--- a/index.html
+++ b/index.html
@@ -70,7 +70,21 @@
                     <button type="submit" class="btn btn-danger">Enviar</button>
                 </div>
             </div>
-        </form>
+            <div class="row">
+                <div class="col">
+                    <a href="#" class="btn btn-warning">Enviar</a>
+                </div>
+            </div>
+        </form>´
+
+        <table class="table table-hover table-striped">
+            <tr>
+                <td>1</td>
+                <td>2</td>
+                <td>3</td>
+                <td>4</td>
+            </tr>
+        </table>
     </main>
     <h1>Hello, world!</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
