--- a/modularizar/nav.html
+++ b/modularizar/nav.html
@@ -13,7 +13,10 @@
             <a class="nav-link" href="exercicio2.php">Exercício-2</a>
           </li> 
           <li class="nav-item">
-            <a class="nav-link" href="exercicio3.php">Exercício-4</a>
+            <a class="nav-link" href="exercicio3.php">Exercício-3</a>
+          </li> 
+          <li class="nav-item">
+            <a class="nav-link" href="exercicio4.php">Exercício-4</a>
           </li> 
           <li class="nav-item">
             <a class="nav-link" href="exercicio5.php">Exercício-5</a>
